resources/public/css/reabledit.css
/* Main container */

.reabledit {
  overflow: hidden;
  height: 100%;
  border-top: 1px solid #ddd;
  border-right: 1px solid #ddd;
}

/* Full-screen area dragging header resize handles */

.reabledit-resize-area {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

/* Container for data rows */

.reabledit-data-rows {
  overflow: auto;
}

/* Rows, their items and modifiers */

.reabledit-row {
  display: flex;
}

.reabledit-row--header {
  overflow: hidden;
}

/* Cells, their items and modifiers */

.reabledit-cell {
  flex: 0 0 auto;
  box-sizing: border-box;
  border-bottom: 1px solid #ddd;
  border-left: 1px solid #ddd;
  background-color: #fff;
  height: 30px;
  outline: none;
  cursor: pointer;
  overflow: hidden;
}

.reabledit-cell--selected {
  background-color: #f9f9f9;
  border: 1px solid #4ca2d8;
}

.reabledit-cell--header {
  background-color: #f3f3f3 !important;
  font-weight: bold;
  display: flex;
  justify-content: space-between;
  cursor: initial;
}

.reabledit-cell__header-text {
  flex: 0 0 auto;
  width: calc(100% - 5px);
}

.reabledit-cell__header-handle {
  flex: 0 0 auto;
  width: 5px;
  cursor: ew-resize;
}

.reabledit-cell__header-scroll {
  background-color: #f3f3f3 !important;
  border-bottom: 1px solid #ddd;
}

/* Read-only cell */

.reabledit-read-only-cell {
  position: relative;
  height: 100%;
}

.reabledit-read-only-cell__input {
  position: absolute;
  width: 0;
  opacity: 0;
}

.reabledit-read-only-cell__view {
  position: absolute;
  width: calc(100% - 7px);
  height: 100%;
  padding: 0 0 0 7px;
}

/* Standard cell */

.reabledit-standard-cell {
  position: relative;
  height: 100%;
}

.reabledit-standard-cell__item {
  position: absolute;
  width: calc(100% - 7px);
  height: 100%;
  padding: 0 0 0 7px;
  font-size: inherit;
  border: none;
}

.reabledit-standard-cell__item--hidden {
  opacity: 0;
}

/* Dropdown cell */

.reabledit-dropdown-cell {
  position: absolute;
  width: inherit;
  height: inherit;
}

.reabledit-dropdown-cell__input {
  position: absolute;
  width: 0;
  cursor: inherit;
  opacity: 0;
}

.reabledit-dropdown-cell__view {
  padding: 0 0 0 7px;
}

.reabledit-dropdown-cell-options {
  position: absolute;
  width: 100%;
  margin-top: 8px;
  z-index: 1;
  background-color: #fff;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2)
}

.reabledit-dropdown-cell-options__item {
  padding: 3px 0 3px 7px;
}

.reabledit-dropdown-cell-options__item--selected {
  background-color: #4ca2d8;
  color: #fff;
}

